# MentalHealthStimulator

./: .gitignore  README.md  vercel.json
MentalHealthSimulator/client/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
MentalHealthSimulator/client/src/app/: globals.css  layout.tsx  page.tsx
MentalHealthSimulator/client/src/app/analytics/: page.tsx
MentalHealthSimulator/client/src/app/breathing/: page.tsx
MentalHealthSimulator/client/src/app/dashboard/: page.tsx
MentalHealthSimulator/client/src/app/login/: page.tsx
MentalHealthSimulator/client/src/app/mood-tracker/: page.tsx
MentalHealthSimulator/client/src/contexts/: QuoteContext.tsx
MentalHealthSimulator/client/src/services/: api.js
MentalHealthSimulator/server/: README.md  hash-password.js  package-lock.json  package.json  server.js  test-api.js
MentalHealthSimulator/server/config/: database.js
MentalHealthSimulator/server/cpp_engine/: CMakeLists.txt  main.cpp  moods.txt  quotes.txt  users.txt
MentalHealthSimulator/server/cpp_engine/classes/classes/: CalmActivity.cpp  CalmActivity.h  CalmingExercises.cpp  CalmingExercises.h  MoodTracker.cpp  MoodTracker.h  QuoteGenerator.cpp  QuoteGenerator.h  QuoteProvider.cpp  QuoteProvider.h  UserManager.cpp  UserManager.h
MentalHealthSimulator/server/cpp_engine/utils/utils/: FileManager.cpp  FileManager.h
MentalHealthSimulator/server/models/: Exercise.js  Mood.js  Quote.js  User.js
MentalHealthSimulator/server/routes/: auth.js  exercises.js  mood.js  quotes.js
MentalHealthSimulator/server/scripts/: seedData.js  seedQuotes.js
(+11 files in other folders)
